--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,3 +1,10 @@
+.txt {
+    text-transform: uppercase;
+    font-weight: normal;
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+}
 
 @media (max-width: 600px) {
     .dataContainer {
